--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,9 @@ lib_managed/
 src_managed/
 project/boot/
 project/plugins/project/
+project/target/*
 
 # Scala-IDE specific
 .scala_dependencies
 .worksheet
+.idea/*
